# dotfiles

./: .minttyrc  .vimrc  a.vim  dfm.yaml  dir.txt
0a9b529f8a1af2a600b720798eb30b0b/: settings.json
109dd9c58466739d9d846be552d645fc/: Microsoft.PowerShell_profile.ps1
4c761f170e016836ff84498202b99827/: .bashrc  .vimrc  .zshrc
4c761f170e016836ff84498202b99827/.project_template/: CMakeLists.txt  conanfile.txt
4c761f170e016836ff84498202b99827/.project_template/src/: main.cpp
941b30d1b9151621491c82b8f0950a97/: coc-settings.json
b036057cc962924abd62de51a07bad81/: coc.vim
ccfa602987093389c79998baa521439e/: keybindings.json
f26e82cee996b79c2482929832173b4e/: acp.vim
f35ed2cd2c0390204425fcbebac3dba5/: CMakeLists.txt  conanfile.txt  template.cpp
